syntax = "proto3";

package go.micro.srv.PostAvatar;

service Example {
	rpc PostAvatar(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
	// 二进制图片流
	bytes Avatar = 1;
	// 文件大小
	int64 Filesize = 2;
	// 文件后缀
	string FileExt = 3;

	string Sessionid = 4;
}

message Response {
	string Errno = 1;
	string Errmsg = 2;
	// 不包含host的头像地址
	string Avatar_url = 3;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
